# dlops-course-codes

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: 10a_Explianability_Model_Understanding_with_Captum.ipynb  13_Hyperparameter_Tuning.ipynb  13a_Intro_to_Weights_&_Biases.ipynb  13b_Simple_PyTorch_Integration_Conv_Net.ipynb  13c_Organizing_Hyperparameter_Sweeps_in_PyTorch_with_W&B.ipynb  14_Pipeline_Versioning_with_W&B_Artifacts.ipynb  15_Intro_to_TorchScript_tutorial.ipynb  16b_export_simple_model_to_onnx_tutorial.ipynb  17a_profiler_recipe.ipynb  17b_profiler_investigating_code.ipynb  1_Revisiting_Python_Basics (1).ipynb  2_Revisiting_tensors_in_Pytorch (1).ipynb  3_Revisiting_Basics_of_Pytorch_for_DL (1).ipynb  4_Classification_and_Feature_Extraction_using_CNN.ipynb  5_Transfer_Learning.ipynb  6_Datasets_and_DataLoaders.ipynb  7_Custom_Datasets_and_Dataloaders.ipynb  8_Tutorial_Linear_Data_and_K_Fold_Cross_Validation.ipynb  8a_Tutorial_Image_Data_Split_with_Indices_and_Transformer_Fine_tuning.ipynb  9_Explainability_CNN_Visualizations.ipynb  DLOps_ClassAssignmemt1_Solution.ipynb
tests/: test_setup.py
